*SVN*

* Added better error message for "packets out of order" #1630 [courtenay]

* Fixed first run of "rake migrate" on PostgreSQL by not expecting a return value on the id #1640


*1.11.0* (5th July, 2005)

* Fixed that Yaml error message in fixtures hid the real error #1623 [Nicholas Seckar]

* Changed logging of SQL statements to use the DEBUG level instead of INFO

* Added new Migrations framework for describing schema transformations in a way that can be easily applied across multiple databases #1604 [Tobias Luetke] See documentation under ActiveRecord::Migration and the additional support in the Rails rakefile/generator.

* Added callback hooks to association collections #1549 [Florian Weber]. Example:

    class Project
      has_and_belongs_to_many :developers, :before_add => :evaluate_velocity
    
      def evaluate_velocity(developer)
        ...
      end
    end 
  
  ..raising an exception will cause the object not to be added (or removed, with before_remove).
    

* Fixed Base.content_columns call for SQL Server adapter #1450 [DeLynn Berry]

* Fixed Base#write_attribute to work with both symbols and strings #1190 [Paul Legato]

* Fixed that has_and_belongs_to_many didn't respect single table inheritance types #1081 [Florian Weber]

* Speed up ActiveRecord#method_missing for the common case (read_attribute).

* Only notify observers on after_find and after_initialize if these methods are defined on the model.  #1235 [skaes@web.de]

* Fixed that single-table inheritance sub-classes couldn't be used to limit the result set with eager loading #1215 [Chris McGrath]

* Fixed validates_numericality_of to work with overrided getter-method when :allow_nil is on #1316 [raidel@onemail.at]

* Added roots, root, and siblings to the batch of methods added by acts_as_tree #1541 [michael@schuerig.de]

* Added support for limit/offset with the MS SQL Server driver so that pagination will now work #1569 [DeLynn Berry]
